LASAGNE CNN IS WORKING! 2 conv layers and fc and softmax

--- a/Lasagne - Conv Net.ipynb
+++ b/Lasagne - Conv Net.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -55,7 +55,7 @@
     "grad_clip = 10\n",
     "batchsize = 32\n",
     "num_epochs = 8\n",
-    "dropout_p = 0.5\n",
+    "dropout_p = 0.0\n",
     "num_lstm_layers = 1\n",
     "theano.config.optimizer='fast_compile'\n",
     "theano.config.exception_verbosity='high'"
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -108,6 +108,7 @@
     "\n",
     "# swap C and H axes --> expected input\n",
     "X = np.swapaxes(X, 1, 3)  # (num_samples, C, W, H)\n",
+    "X -= np.mean(X, axis = 0)  # Data Preprocessing: mean subtraction\n",
     "\n",
     "#Splitting into train, val, test sets\n",
     "\n",
@@ -133,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -145,25 +146,32 @@
      "text": [
       "hello world!\n",
       "Starting training...\n",
-      "Batch 1: Train Error = 89.8463868279\n",
-      "Batch 1: Total Train Error = 89.8463868279\n",
-      "Batch 2: Train Error = nan\n",
-      "Batch 2: Total Train Error = nan\n",
-      "Batch 3: Train Error = nan\n",
-      "Batch 3: Total Train Error = nan\n",
-      "Epoch 1 of 8 took 32.419s\n",
-      "  training loss:\t\tnan\n"
-     ]
-    },
-    {
-     "ename": "ZeroDivisionError",
-     "evalue": "integer division or modulo by zero",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-f2f5c8fc400f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     71\u001b[0m         epoch + 1, num_epochs, time.time() - start_time))\n\u001b[1;32m     72\u001b[0m     \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"  training loss:\\t\\t{:.6f}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_err\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mtrain_batches\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 73\u001b[0;31m     \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"  validation loss:\\t\\t{:.6f}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval_err\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mval_batches\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     74\u001b[0m     print(\"  validation accuracy:\\t\\t{:.2f} %\".format(\n\u001b[1;32m     75\u001b[0m         val_acc / val_batches * 100))\n",
-      "\u001b[0;31mZeroDivisionError\u001b[0m: integer division or modulo by zero"
+      "Epoch 1 of 8 took 46.793s\n",
+      "  training loss:\t\t13.787514\n",
+      "  training accuracy:\t\t9.437500\n",
+      "  validation loss:\t\t9.394270\n",
+      "  validation accuracy:\t\t16.88 %\n",
+      "Epoch 2 of 8 took 44.411s\n",
+      "  training loss:\t\t6.558167\n",
+      "  training accuracy:\t\t11.562500\n",
+      "  validation loss:\t\t6.273649\n",
+      "  validation accuracy:\t\t21.88 %\n",
+      "Epoch 3 of 8 took 39.835s\n",
+      "  training loss:\t\t4.299349\n",
+      "  training accuracy:\t\t12.000000\n",
+      "  validation loss:\t\t4.386510\n",
+      "  validation accuracy:\t\t18.75 %\n",
+      "Epoch 4 of 8 took 39.620s\n",
+      "  training loss:\t\t3.097883\n",
+      "  training accuracy:\t\t11.375000\n",
+      "  validation loss:\t\t3.201869\n",
+      "  validation accuracy:\t\t16.88 %\n",
+      "Epoch 5 of 8 took 46.114s\n",
+      "  training loss:\t\t2.405376\n",
+      "  training accuracy:\t\t11.593750\n",
+      "  validation loss:\t\t2.536576\n",
+      "  validation accuracy:\t\t19.38 %\n",
+      "Epoch 6 of 8 took 51.685s"
      ]
     }
    ],
@@ -173,19 +181,24 @@
     "target_var = Tensor.ivector('targets')\n",
     "\n",
     "# Create neural network model\n",
-    "cnn_model.hello_world()\n",
-    "model = cnn_model.build_cnn(NUM_CLASSES, inputVar = input_var)\n",
+    "l_in, l_out = cnn_model.build_cnn(C, W, H, NUM_CLASSES, dropout=dropout_p, inputVar = input_var)\n",
     "\n",
     "# Create a loss expression for training, i.e., a scalar objective we want\n",
     "    # to minimize (for our multi-class problem, it is the cross-entropy loss):\n",
-    "prediction = lasagne.layers.get_output(model)\n",
-    "loss = lasagne.objectives.categorical_crossentropy(prediction, target_var)\n",
+    "prediction = lasagne.layers.get_output(l_out)\n",
+    "loss = Tensor.nnet.categorical_crossentropy(prediction, target_var)\n",
+    "# loss = lasagne.objectives.categorical_crossentropy(prediction, target_var)\n",
     "loss = loss.mean()\n",
+    "acc = Tensor.mean(Tensor.eq(Tensor.argmax(prediction, axis=1), target_var),\n",
+    "                  dtype=theano.config.floatX)\n",
+    "\n",
+    "# Return predictions in a function\n",
+    "pred_fn = theano.function([l_in.input_var], prediction)\n",
     "\n",
     " # Create update expressions for training, i.e., how to modify the\n",
     "# parameters at each training step. Here, we'll use Stochastic Gradient\n",
     "# Descent (SGD) with Nesterov momentum, but Lasagne offers plenty more.\n",
-    "params = lasagne.layers.get_all_params(model, trainable=True)\n",
+    "params = lasagne.layers.get_all_params(l_out, trainable=True)\n",
     "updates = lasagne.updates.nesterov_momentum(\n",
     "        loss, params, learning_rate=LEARNING_RATE, momentum=MOMENTUM)\n",
     "\n",
@@ -193,9 +206,10 @@
     "# Create a loss expression for validation/testing. The crucial difference\n",
     "# here is that we do a deterministic forward pass through the network,\n",
     "# disabling dropout layers.\n",
-    "test_prediction = lasagne.layers.get_output(model, deterministic=True)\n",
-    "test_loss = lasagne.objectives.categorical_crossentropy(test_prediction,\n",
-    "                                                        target_var)\n",
+    "test_prediction = lasagne.layers.get_output(l_out, deterministic=True)\n",
+    "# test_loss = lasagne.objectives.categorical_crossentropy(test_prediction, target_var)\n",
+    "test_loss = Tensor.nnet.categorical_crossentropy(test_prediction, target_var)\n",
+    "\n",
     "test_loss = test_loss.mean()\n",
     "# As a bonus, also create an expression for the classification accuracy:\n",
     "test_acc = Tensor.mean(Tensor.eq(Tensor.argmax(test_prediction, axis=1), target_var),\n",
@@ -203,7 +217,8 @@
     "\n",
     " # Compile a function performing a training step on a mini-batch (by giving\n",
     "# the updates dictionary) and returning the corresponding training loss:\n",
-    "train_fn = theano.function([input_var, target_var], loss, updates=updates, allow_input_downcast=True)\n",
+    "train_fn = theano.function([input_var, target_var], [loss, acc], updates=updates)\n",
+    "# train_fn = theano.function([input_var, target_var], loss, updates=updates)\n",
     "\n",
     "# Compile a second function computing the validation loss and accuracy:\n",
     "val_fn = theano.function([input_var, target_var], [test_loss, test_acc])\n",
@@ -214,25 +229,34 @@
     "for epoch in range(num_epochs):\n",
     "    # In each epoch, we do a full pass over the training data:\n",
     "    train_err = 0\n",
+    "    train_acc = 0\n",
     "    train_batches = 0\n",
     "    start_time = time.time()\n",
-    "    for batch in data_utils.iterate_minibatches(X_train, y_train, 500, shuffle=True):\n",
+    "    \n",
+    "    for batch in data_utils.iterate_minibatches(X_train, y_train, batchsize, shuffle=False):\n",
     "        inputs, targets = batch\n",
-    "        err = train_fn(inputs, targets)\n",
-    "        print(\"Batch {}: Train Error = {}\").format(train_batches+1, err)\n",
+    "        err, acc = train_fn(inputs, targets)\n",
+    "#         print(\"Batch {}: Train Error = {}, Train Accuracy = {}\").format(train_batches+1, err, acc)\n",
+    "#         err = train_fn(inputs, targets)\n",
+    "        prediction = pred_fn(inputs)\n",
+    "#         print(\"Batch {}: Train Error = {}\").format(train_batches+1, err)\n",
+    "#         print(\"prediction:\"), prediction\n",
     "        train_err += err\n",
-    "        print(\"Batch {}: Total Train Error = {}\").format(train_batches+1, train_err)\n",
+    "        train_acc += acc\n",
+    "#         print(\"Batch {}: Total Train Error = {}, Total Train Accuracy = {}\").format(train_batches+1, train_err, train_acc)\n",
+    "#         print(\"Batch {}: Total Train Error = {}\").format(train_batches+1, train_err)\n",
     "        train_batches += 1\n",
     "            \n",
     "    # And a full pass over the validation data:\n",
     "    val_err = 0\n",
     "    val_acc = 0\n",
     "    val_batches = 0\n",
-    "    for batch in data_utils.iterate_minibatches(X_val, y_val, 500, shuffle=False):\n",
+    "    for batch in data_utils.iterate_minibatches(X_val, y_val, batchsize, shuffle=False):\n",
     "        inputs, targets = batch\n",
     "        err, acc = val_fn(inputs, targets)\n",
+    "#         print(\"Batch {}: Val Error = {}\").format(val_batches+1, err)\n",
     "        val_err += err\n",
-    "        print(\"Batch {}: Total Val Error = {}\").format(val_batches+1, val_err)\n",
+    "#         print(\"Batch {}: Total Val Error = {}\").format(val_batches+1, val_err)\n",
     "        val_acc += acc\n",
     "        val_batches += 1\n",
     "    \n",
@@ -240,6 +264,7 @@
     "    print(\"Epoch {} of {} took {:.3f}s\".format(\n",
     "        epoch + 1, num_epochs, time.time() - start_time))\n",
     "    print(\"  training loss:\\t\\t{:.6f}\".format(train_err / train_batches))\n",
+    "    print(\"  training accuracy:\\t\\t{:.2f} %\".format(train_acc))\n",
     "    print(\"  validation loss:\\t\\t{:.6f}\".format(val_err / val_batches))\n",
     "    print(\"  validation accuracy:\\t\\t{:.2f} %\".format(\n",
     "        val_acc / val_batches * 100))\n",
