--- a/Lasagne - Conv Net.ipynb
+++ b/Lasagne - Conv Net.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -40,30 +40,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# hyperparameters\n",
-    "# hidden_size = 256 # size of hidden layer of neurons\n",
+    "# Model hyperparameters\n",
+    "num_filters = 32\n",
+    "filter_width = 5\n",
+    "pool_width = 2\n",
+    "hidden_size = 256 # size of hidden layer of neurons\n",
+    "dropout_p = 0.0\n",
+    "\n",
+    "# Optimization hyperparams\n",
     "LEARNING_RATE = 1e-2\n",
     "MOMENTUM = 0.9\n",
-    "lr_decay = 0.995\n",
-    "reg_strength = 2e-2\n",
-    "grad_clip = 10\n",
+    "# lr_decay = 0.995\n",
+    "# reg_strength = 2e-2\n",
+    "# grad_clip = 10\n",
     "batchsize = 32\n",
     "num_epochs = 8\n",
-    "dropout_p = 0.0\n",
-    "num_lstm_layers = 1\n",
     "theano.config.optimizer='fast_compile'\n",
     "theano.config.exception_verbosity='high'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -134,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -144,34 +148,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello world!\n",
+      "Building network...\n",
+      "Compiling functions...\n",
+      "Compiling Finished!\n",
       "Starting training...\n",
-      "Epoch 1 of 8 took 46.793s\n",
-      "  training loss:\t\t13.787514\n",
-      "  training accuracy:\t\t9.437500\n",
-      "  validation loss:\t\t9.394270\n",
-      "  validation accuracy:\t\t16.88 %\n",
-      "Epoch 2 of 8 took 44.411s\n",
-      "  training loss:\t\t6.558167\n",
-      "  training accuracy:\t\t11.562500\n",
-      "  validation loss:\t\t6.273649\n",
+      "Epoch 1 of 8 took 42.399s\n",
+      "  training loss:\t\t37445.603316\n",
+      "  training accuracy:\t\t10.22 %\n",
+      "  validation loss:\t\t1.602254\n",
       "  validation accuracy:\t\t21.88 %\n",
-      "Epoch 3 of 8 took 39.835s\n",
-      "  training loss:\t\t4.299349\n",
-      "  training accuracy:\t\t12.000000\n",
-      "  validation loss:\t\t4.386510\n",
-      "  validation accuracy:\t\t18.75 %\n",
-      "Epoch 4 of 8 took 39.620s\n",
-      "  training loss:\t\t3.097883\n",
-      "  training accuracy:\t\t11.375000\n",
-      "  validation loss:\t\t3.201869\n",
-      "  validation accuracy:\t\t16.88 %\n",
-      "Epoch 5 of 8 took 46.114s\n",
-      "  training loss:\t\t2.405376\n",
-      "  training accuracy:\t\t11.593750\n",
-      "  validation loss:\t\t2.536576\n",
-      "  validation accuracy:\t\t19.38 %\n",
-      "Epoch 6 of 8 took 51.685s"
+      "Epoch 2 of 8 took 38.128s\n",
+      "  training loss:\t\t1.603228\n",
+      "  training accuracy:\t\t10.59 %\n",
+      "  validation loss:\t\t1.598242\n",
+      "  validation accuracy:\t\t21.88 %\n",
+      "Epoch 3 of 8 took 36.933s\n",
+      "  training loss:\t\t1.602582\n",
+      "  training accuracy:\t\t10.59 %\n",
+      "  validation loss:\t\t1.596488\n",
+      "  validation accuracy:\t\t21.88 %\n",
+      "Epoch 4 of 8 took 37.119s\n",
+      "  training loss:\t\t1.602509\n",
+      "  training accuracy:\t\t10.59 %\n",
+      "  validation loss:\t\t1.596682\n",
+      "  validation accuracy:\t\t21.88 %\n",
+      "Epoch 5 of 8 took 36.458s\n",
+      "  training loss:\t\t1.603105\n",
+      "  training accuracy:\t\t10.59 %\n",
+      "  validation loss:\t\t1.596970\n",
+      "  validation accuracy:\t\t21.88 %\n",
+      "Epoch 6 of 8 took 36.296s\n",
+      "  training loss:\t\t1.602438\n",
+      "  training accuracy:\t\t10.59 %\n",
+      "  validation loss:\t\t1.596114\n",
+      "  validation accuracy:\t\t21.88 %\n",
+      "Epoch 7 of 8 took 36.385s\n",
+      "  training loss:\t\t1.602693\n",
+      "  training accuracy:\t\t10.59 %\n",
+      "  validation loss:\t\t1.596490\n",
+      "  validation accuracy:\t\t21.88 %\n",
+      "Epoch 8 of 8 took 36.347s\n",
+      "  training loss:\t\t1.602340\n",
+      "  training accuracy:\t\t10.59 %\n",
+      "  validation loss:\t\t1.596285\n",
+      "  validation accuracy:\t\t21.88 %\n",
+      "Training finished!\n",
+      "Testing...\n",
+      "Final results:\n",
+      "  test loss:\t\t\t1.604985\n",
+      "  test accuracy:\t\t20.62 %\n"
      ]
     }
    ],
@@ -180,8 +205,12 @@
     "input_var = Tensor.tensor4('inputs')\n",
     "target_var = Tensor.ivector('targets')\n",
     "\n",
+    "print('Building network...')\n",
+    "\n",
     "# Create neural network model\n",
-    "l_in, l_out = cnn_model.build_cnn(C, W, H, NUM_CLASSES, dropout=dropout_p, inputVar = input_var)\n",
+    "l_in, l_out = cnn_model.build_cnn(C, W, H, NUM_CLASSES, num_filters=num_filters, filter_width=filter_width, pool_width=pool_width, hidden_size=hidden_size, dropout=dropout_p, inputVar = input_var)\n",
+    "\n",
+    "print('Compiling functions...')\n",
     "\n",
     "# Create a loss expression for training, i.e., a scalar objective we want\n",
     "    # to minimize (for our multi-class problem, it is the cross-entropy loss):\n",
@@ -223,40 +252,34 @@
     "# Compile a second function computing the validation loss and accuracy:\n",
     "val_fn = theano.function([input_var, target_var], [test_loss, test_acc])\n",
     "\n",
+    "print('Compiling Finished!')\n",
+    "\n",
     "# Finally, launch the training loop.\n",
     "print(\"Starting training...\")\n",
     "# We iterate over epochs:\n",
     "for epoch in range(num_epochs):\n",
-    "    # In each epoch, we do a full pass over the training data:\n",
+    "    # 1) In each epoch, we do a full pass over the training data:\n",
     "    train_err = 0\n",
     "    train_acc = 0\n",
     "    train_batches = 0\n",
     "    start_time = time.time()\n",
     "    \n",
-    "    for batch in data_utils.iterate_minibatches(X_train, y_train, batchsize, shuffle=False):\n",
+    "    for batch in data_utils.iterate_minibatches(X_train, y_train, batchsize, shuffle=True):\n",
     "        inputs, targets = batch\n",
     "        err, acc = train_fn(inputs, targets)\n",
-    "#         print(\"Batch {}: Train Error = {}, Train Accuracy = {}\").format(train_batches+1, err, acc)\n",
-    "#         err = train_fn(inputs, targets)\n",
     "        prediction = pred_fn(inputs)\n",
-    "#         print(\"Batch {}: Train Error = {}\").format(train_batches+1, err)\n",
-    "#         print(\"prediction:\"), prediction\n",
     "        train_err += err\n",
     "        train_acc += acc\n",
-    "#         print(\"Batch {}: Total Train Error = {}, Total Train Accuracy = {}\").format(train_batches+1, train_err, train_acc)\n",
-    "#         print(\"Batch {}: Total Train Error = {}\").format(train_batches+1, train_err)\n",
     "        train_batches += 1\n",
     "            \n",
-    "    # And a full pass over the validation data:\n",
+    "    # 2) And a full pass over the validation data:\n",
     "    val_err = 0\n",
     "    val_acc = 0\n",
     "    val_batches = 0\n",
     "    for batch in data_utils.iterate_minibatches(X_val, y_val, batchsize, shuffle=False):\n",
     "        inputs, targets = batch\n",
     "        err, acc = val_fn(inputs, targets)\n",
-    "#         print(\"Batch {}: Val Error = {}\").format(val_batches+1, err)\n",
     "        val_err += err\n",
-    "#         print(\"Batch {}: Total Val Error = {}\").format(val_batches+1, val_err)\n",
     "        val_acc += acc\n",
     "        val_batches += 1\n",
     "    \n",
@@ -269,11 +292,15 @@
     "    print(\"  validation accuracy:\\t\\t{:.2f} %\".format(\n",
     "        val_acc / val_batches * 100))\n",
     "\n",
+    "print('Training finished!')\n",
+    "\n",
+    "    \n",
     "# After training, we compute and print the test error:\n",
+    "print('Testing...')\n",
     "test_err = 0\n",
     "test_acc = 0\n",
     "test_batches = 0\n",
-    "for batch in data_utils.iterate_minibatches(X_test, y_test, 500, shuffle=False):\n",
+    "for batch in data_utils.iterate_minibatches(X_test, y_test, batchsize, shuffle=False):\n",
     "    inputs, targets = batch\n",
     "    err, acc = val_fn(inputs, targets)\n",
     "    test_err += err\n",
