--- a/Lasagne - Conv Net.ipynb
+++ b/Lasagne - Conv Net.ipynb
@@ -34,7 +34,7 @@
    "outputs": [],
    "source": [
     "# Import own modules\n",
-    "import data_utils\n",
+    "import data_utils, visualize\n",
     "import lasagne_model_predict_country as cnn_model"
    ]
   },
@@ -52,17 +52,20 @@
     "pool_width = 2\n",
     "hidden_size = 256 # size of hidden layer of neurons\n",
     "dropout_p = 0.0\n",
+    "# lr_decay = 0.995\n",
+    "reg_strength = 0\n",
+    "# grad_clip = 10\n",
     "\n",
     "# Optimization hyperparams\n",
     "LEARNING_RATE = 1e-2\n",
     "MOMENTUM = 0.9\n",
-    "# lr_decay = 0.995\n",
-    "# reg_strength = 2e-2\n",
-    "# grad_clip = 10\n",
+    "theano.config.optimizer='fast_compile'\n",
+    "theano.config.exception_verbosity='high'\n",
+    "\n",
+    "# Training parameters\n",
     "batchsize = 32\n",
     "num_epochs = 8\n",
-    "theano.config.optimizer='fast_compile'\n",
-    "theano.config.exception_verbosity='high'"
+    "record_per_iter = True"
    ]
   },
   {
@@ -138,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -152,50 +155,50 @@
       "Compiling functions...\n",
       "Compiling Finished!\n",
       "Starting training...\n",
-      "Epoch 1 of 8 took 42.399s\n",
-      "  training loss:\t\t37445.603316\n",
-      "  training accuracy:\t\t10.22 %\n",
-      "  validation loss:\t\t1.602254\n",
+      "Epoch 1 of 8 took 58.429s\n",
+      "  training loss:\t\t23817772.539612\n",
+      "  training accuracy:\t\t21.28 %\n",
+      "  validation loss:\t\t1.611223\n",
+      "  validation accuracy:\t\t28.12 %\n",
+      "Epoch 2 of 8 took 54.039s\n",
+      "  training loss:\t\t1.603508\n",
+      "  training accuracy:\t\t22.54 %\n",
+      "  validation loss:\t\t1.605330\n",
       "  validation accuracy:\t\t21.88 %\n",
-      "Epoch 2 of 8 took 38.128s\n",
-      "  training loss:\t\t1.603228\n",
-      "  training accuracy:\t\t10.59 %\n",
-      "  validation loss:\t\t1.598242\n",
+      "Epoch 3 of 8 took 53.472s\n",
+      "  training loss:\t\t1.602875\n",
+      "  training accuracy:\t\t22.54 %\n",
+      "  validation loss:\t\t1.605709\n",
+      "  validation accuracy:\t\t18.75 %\n",
+      "Epoch 4 of 8 took 53.025s\n",
+      "  training loss:\t\t1.602611\n",
+      "  training accuracy:\t\t22.21 %\n",
+      "  validation loss:\t\t1.594218\n",
       "  validation accuracy:\t\t21.88 %\n",
-      "Epoch 3 of 8 took 36.933s\n",
-      "  training loss:\t\t1.602582\n",
-      "  training accuracy:\t\t10.59 %\n",
-      "  validation loss:\t\t1.596488\n",
-      "  validation accuracy:\t\t21.88 %\n",
-      "Epoch 4 of 8 took 37.119s\n",
-      "  training loss:\t\t1.602509\n",
-      "  training accuracy:\t\t10.59 %\n",
-      "  validation loss:\t\t1.596682\n",
-      "  validation accuracy:\t\t21.88 %\n",
-      "Epoch 5 of 8 took 36.458s\n",
-      "  training loss:\t\t1.603105\n",
-      "  training accuracy:\t\t10.59 %\n",
-      "  validation loss:\t\t1.596970\n",
-      "  validation accuracy:\t\t21.88 %\n",
-      "Epoch 6 of 8 took 36.296s\n",
-      "  training loss:\t\t1.602438\n",
-      "  training accuracy:\t\t10.59 %\n",
-      "  validation loss:\t\t1.596114\n",
-      "  validation accuracy:\t\t21.88 %\n",
-      "Epoch 7 of 8 took 36.385s\n",
-      "  training loss:\t\t1.602693\n",
-      "  training accuracy:\t\t10.59 %\n",
-      "  validation loss:\t\t1.596490\n",
-      "  validation accuracy:\t\t21.88 %\n",
-      "Epoch 8 of 8 took 36.347s\n",
-      "  training loss:\t\t1.602340\n",
-      "  training accuracy:\t\t10.59 %\n",
-      "  validation loss:\t\t1.596285\n",
+      "Epoch 5 of 8 took 60.781s\n",
+      "  training loss:\t\t1.602800\n",
+      "  training accuracy:\t\t22.54 %\n",
+      "  validation loss:\t\t1.616812\n",
+      "  validation accuracy:\t\t18.75 %\n",
+      "Epoch 6 of 8 took 60.849s\n",
+      "  training loss:\t\t1.602513\n",
+      "  training accuracy:\t\t22.54 %\n",
+      "  validation loss:\t\t1.577824\n",
+      "  validation accuracy:\t\t18.75 %\n",
+      "Epoch 7 of 8 took 55.193s\n",
+      "  training loss:\t\t1.602596\n",
+      "  training accuracy:\t\t22.54 %\n",
+      "  validation loss:\t\t1.680558\n",
+      "  validation accuracy:\t\t9.38 %\n",
+      "Epoch 8 of 8 took 54.363s\n",
+      "  training loss:\t\t1.602779\n",
+      "  training accuracy:\t\t22.54 %\n",
+      "  validation loss:\t\t1.622341\n",
       "  validation accuracy:\t\t21.88 %\n",
       "Training finished!\n",
       "Testing...\n",
       "Final results:\n",
-      "  test loss:\t\t\t1.604985\n",
+      "  test loss:\t\t\t1.604697\n",
       "  test accuracy:\t\t20.62 %\n"
      ]
     }
@@ -257,6 +260,10 @@
     "# Finally, launch the training loop.\n",
     "print(\"Starting training...\")\n",
     "# We iterate over epochs:\n",
+    "train_err_list = []\n",
+    "val_err_list = []\n",
+    "train_acc_list = []\n",
+    "val_acc_list = []\n",
     "for epoch in range(num_epochs):\n",
     "    # 1) In each epoch, we do a full pass over the training data:\n",
     "    train_err = 0\n",
@@ -264,33 +271,49 @@
     "    train_batches = 0\n",
     "    start_time = time.time()\n",
     "    \n",
+    "    # Each batch is 1 iteration\n",
     "    for batch in data_utils.iterate_minibatches(X_train, y_train, batchsize, shuffle=True):\n",
     "        inputs, targets = batch\n",
-    "        err, acc = train_fn(inputs, targets)\n",
+    "        t_err, t_acc = train_fn(inputs, targets)\n",
     "        prediction = pred_fn(inputs)\n",
-    "        train_err += err\n",
-    "        train_acc += acc\n",
+    "        train_err += t_err\n",
+    "        train_acc += t_acc\n",
     "        train_batches += 1\n",
+    "        \n",
+    "        # Run validation on entire data set after each iteration, not iterating over mini batches of \n",
+    "        \n",
+    "        val_err, val_acc = val_fn(inputs, targets)\n",
+    "        \n",
+    "        if record_per_iter:\n",
+    "            train_err_list.append(t_err)\n",
+    "            train_acc_list.append(t_acc)\n",
+    "            val_err_list.append(val_err)\n",
+    "            val_acc_list.append(val_acc)\n",
+    "\n",
     "            \n",
     "    # 2) And a full pass over the validation data:\n",
-    "    val_err = 0\n",
-    "    val_acc = 0\n",
-    "    val_batches = 0\n",
-    "    for batch in data_utils.iterate_minibatches(X_val, y_val, batchsize, shuffle=False):\n",
-    "        inputs, targets = batch\n",
-    "        err, acc = val_fn(inputs, targets)\n",
-    "        val_err += err\n",
-    "        val_acc += acc\n",
-    "        val_batches += 1\n",
+    "#     val_err = 0\n",
+    "#     val_acc = 0\n",
+    "#     val_batches = 0\n",
+    "#     for batch in data_utils.iterate_minibatches(X_val, y_val, batchsize, shuffle=False):\n",
+    "#         inputs, targets = batch\n",
+    "#         err, acc = val_fn(inputs, targets)\n",
+    "        \n",
     "    \n",
     "    # Then we print the results for this epoch:\n",
     "    print(\"Epoch {} of {} took {:.3f}s\".format(\n",
     "        epoch + 1, num_epochs, time.time() - start_time))\n",
     "    print(\"  training loss:\\t\\t{:.6f}\".format(train_err / train_batches))\n",
-    "    print(\"  training accuracy:\\t\\t{:.2f} %\".format(train_acc))\n",
-    "    print(\"  validation loss:\\t\\t{:.6f}\".format(val_err / val_batches))\n",
+    "    print(\"  training accuracy:\\t\\t{:.2f} %\".format(train_acc / train_batches * 100))\n",
+    "    print(\"  validation loss:\\t\\t{:.6f}\".format(val_err / 1))\n",
     "    print(\"  validation accuracy:\\t\\t{:.2f} %\".format(\n",
-    "        val_acc / val_batches * 100))\n",
+    "        val_acc / 1 * 100))\n",
+    "    \n",
+    "    if not record_per_iter:\n",
+    "        train_err_list.append(train_err)\n",
+    "        train_acc_list.append(train_acc)\n",
+    "        val_err_list.append(val_err)\n",
+    "        val_acc_list.append(val_acc)\n",
     "\n",
     "print('Training finished!')\n",
     "\n",
@@ -311,6 +334,24 @@
     "print(\"  test loss:\\t\\t\\t{:.6f}\".format(test_err / test_batches))\n",
     "print(\"  test accuracy:\\t\\t{:.2f} %\".format(\n",
     "    test_acc / test_batches * 100))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Visualize the loss and the accuracies for both training and validation sets for each epoch\n",
+    "num_train = X_train.shape[0]\n",
+    "if record_per_iter:\n",
+    "    xlabel = \"iterations\"\n",
+    "else:\n",
+    "    xlabel = \"epochs\"\n",
+    "# Printing training losses and training + validation accuracies\n",
+    "visualize.plot_loss_acc('subset_5_train', train_err_list, train_acc_list, val_acc_list, LEARNING_RATE, reg_strength, num_epochs, num_train, xlabel=xlabel)"
    ]
   },
   {
